<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>examples_launch</name>
  <version>0.0.1</version>
  <description>A simple package with some examples of how to use launch files</description>
  <maintainer email="joao.monteiro@cm-robotics.com">Joao Carlos Espiuca Monteiro</maintainer>
  <license>GNU General Public License v3.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>nav2_commmon</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
